# wav2vec-emotions

./: .gitignore  Readme.md  requierments.txt
cpp/: CMakeLists.txt  main.cpp  run.sh  utils.cpp  utils.h
cpp/include/: backends.h  inference.h  preprocessor.h  types.h  utils.h
cpp/include/cuda/: cuda_preprocess.cuh
cpp/src/: backends.cpp  inference.cpp  preprocessor.cpp  preprocessor.h
cpp/src/cuda/: cuda_preprocess.cu
python/configs/: train.json
python/src/: __init__.py  _trainer.py  augments.py  dataset.py  evaluator.py  export.py  inference.py  loss_function.py  train.py
